--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿altair==5.5.0
+altair==5.5.0
 altgraph==0.17.4
 attrs==25.3.0
 blinker==1.9.0
@@ -49,3 +49,4 @@ typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 watchdog==6.0.0
+psycopg2-binary
